# invoiceninja-mcp

./: .env.example  .gitignore  README.md  api-docs.yaml  implementation.md  pyproject.toml  run.sh  test_connection.py  test_debug.py  test_mcp_tools.py  test_write_operations.py
invoiceninja_mcp/: client.py  config.py  models.py  server.py
src/invoiceninja_mcp/: __init__.py  client.py  config.py  models.py  server.py
tests/: conftest.py  test_btw_report.py  test_connection.py  test_debug.py  test_mcp_tools.py  test_write_operations.py
