[project]
name = "invoiceninja-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "awiseguy",email = "arvin@wise-it.info"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastmcp (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.13.3,<0.14.0)"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "writes_data: tests that create/update/delete real data in Invoice Ninja (skipped unless ALLOW_WRITE_TESTS=1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
